2-llvmtools/04-libcxx
# Set CC and CXX compiler with recently built stage0 clang (cgnutools)
#export CXX=/cgnutools/bin/clang++
#export  CC=/cgnutools/bin/clang
export CXX=${CMLFS_TARGET}-clang++
export  CC=${CMLFS_TARGET}-clang

cd ${LLVMSRC}/projects/libcxx

cmake -B build  \
      -DCMAKE_INSTALL_PREFIX=/llvmtools \
      -DLLVM_PATH="${LLVMSRC}" \
      -DLIBCXX_ENABLE_SHARED=ON \
      -DLIBCXX_ENABLE_STATIC=ON  \
      -DLIBCXX_HAS_MUSL_LIBC=ON \
      -DLIBCXX_USE_COMPILER_RT=ON \
      -DLIBCXX_CXX_ABI=libcxxabi \
      -DLIBCXX_CXX_ABI_INCLUDE_PATHS="/llvmtools/include" \
      -DLIBCXXABI_USE_LLVM_UNWINDER=ON \
      -DLIBCXX_CXX_ABI_LIBRARY_PATH=/llvmtools/lib \
      -DLIBCXX_INSTALL_HEADERS=ON \
      -DCMAKE_CXX_FLAGS="-I/llvmtools/include" \
      -DCMAKE_C_FLAGS="-I/llvmtools/include" 
make -C build

############################# BUILD BREAKS #######################################################
canning dependencies of target cxx_shared                                                         
make[2]: Leaving directory '/mnt/cmlfs/sources/llvm/projects/libcxx/build'                         
make[2]: Entering directory '/mnt/cmlfs/sources/llvm/projects/libcxx/build'                        
[ 69%] Building CXX object src/CMakeFiles/cxx_shared.dir/algorithm.cpp.o                           
[ 69%] Building CXX object src/CMakeFiles/cxx_shared.dir/any.cpp.o                                 
[ 69%] Building CXX object src/CMakeFiles/cxx_shared.dir/atomic.cpp.o                              
[ 70%] Building CXX object src/CMakeFiles/cxx_shared.dir/barrier.cpp.o                             
[ 70%] Building CXX object src/CMakeFiles/cxx_shared.dir/bind.cpp.o                                
[ 70%] Building CXX object src/CMakeFiles/cxx_shared.dir/charconv.cpp.o                            
In file included from /mnt/cmlfs/sources/llvm/projects/libcxx/src/charconv.cpp:9:                  
In file included from /mnt/cmlfs/sources/llvm/projects/libcxx/build/include/c++/v1/charconv:79:    /mnt/cmlfs/sources/llvm/projects/libcxx/build/include/c++/v1/cmath:321:9: error: no member named 'signbit' in the global namespace; did you mean '__signbit'?
using ::signbit;
      ~~^~~~~~~
        __signbit
/llvmtools/include/math.h:93:5: note: '__signbit' declared here
int __signbit(double);
    ^
##################################################################################################
 
make -C build install
rm -rf build       
